# c-frame

./: CMakeLists.txt  README.md  main.cpp
config/: config.json
getConfig/: CMakeLists.txt  myConfig.cpp  myConfig.h
include/: example.h
src/: example.cpp
